--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+html{
+    scroll-behavior: smooth;
+}
+
 * {
     padding: 0;
     margin: 0;
@@ -22,11 +26,13 @@ ul {
     list-style: none;
     padding: 0px;
     margin: 0px;
+    transition: 0.5s;
 }
 
 .nav li {
     text-decoration: none;
     display: inline-block;
+    transition: 0.5s;
 }
 
 .nav li a {
